<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="pl.piotrgorny.gymondo.ui.viewModel.ExerciseViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{view -> viewModel.openExerciseDetails()}">
        <TextView
            android:id="@+id/item_exercise_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_exercise_image" />
        <TextView
            android:id="@+id/item_exercise_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.name}"
            android:layout_marginStart="10dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/item_exercise_name_label"
            app:layout_constraintStart_toEndOf="@id/item_exercise_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Exercise name" />

        <TextView
            android:id="@+id/item_exercise_category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_label"
            app:layout_constraintTop_toBottomOf="@+id/item_exercise_name"
            app:layout_constraintStart_toStartOf="@id/item_exercise_name_label"/>

        <TextView
            android:id="@+id/item_exercise_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.category}"
            android:layout_marginStart="10dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/item_exercise_category_label"
            app:layout_constraintStart_toEndOf="@id/item_exercise_category_label"
            app:layout_constraintEnd_toEndOf="@id/item_exercise_name"
            tools:text="Exercise category"/>

        <TextView
            android:id="@+id/item_exercise_equipment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment_label"
            app:layout_constraintTop_toBottomOf="@+id/item_exercise_category"
            app:layout_constraintStart_toStartOf="@id/item_exercise_name_label"/>

        <TextView
            android:id="@+id/item_exercise_equipment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.comaSeparatedEquipment}"
            android:layout_marginStart="10dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/item_exercise_equipment_label"
            app:layout_constraintStart_toEndOf="@id/item_exercise_equipment_label"
            app:layout_constraintEnd_toEndOf="@id/item_exercise_name"
            tools:text="1,2,3,4,5"/>

        <TextView
            android:id="@+id/item_exercise_muscles_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/muscles_label"
            app:layout_constraintTop_toBottomOf="@+id/item_exercise_equipment"
            app:layout_constraintStart_toStartOf="@id/item_exercise_name_label"/>

        <TextView
            android:id="@+id/item_exercise_muscles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.comaSeparatedMuscles}"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@+id/item_exercise_muscles_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_exercise_muscles_label"
            app:layout_constraintEnd_toEndOf="@id/item_exercise_name"
            tools:text="1,2,3,4,5"/>

        <ImageView
            android:id="@+id/item_exercise_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            imageUrl="@{viewModel.mainImage}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@drawable/ic_image"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>