<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="pl.piotrgorny.gymondo.ui.viewModel.ExerciseViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/exercise_fragment_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/exercise_fragment_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.name}"
            android:layout_marginStart="10dp"
            app:layout_constraintBaseline_toBaselineOf="@id/exercise_fragment_name_label"
            app:layout_constraintStart_toEndOf="@id/exercise_fragment_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Exercise name" />

        <TextView
            android:id="@+id/exercise_fragment_category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/category_label"
            app:layout_constraintTop_toBottomOf="@id/exercise_fragment_name"
            app:layout_constraintStart_toStartOf="@id/exercise_fragment_name_label"/>

        <TextView
            android:id="@+id/exercise_fragment_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.category}"
            android:layout_marginStart="10dp"
            app:layout_constraintBaseline_toBaselineOf="@id/exercise_fragment_category_label"
            app:layout_constraintStart_toEndOf="@id/exercise_fragment_category_label"
            app:layout_constraintEnd_toEndOf="@id/exercise_fragment_name"
            tools:text="Exercise category"/>

        <TextView
            android:id="@+id/exercise_fragment_equipment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment_label"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/exercise_fragment_category"
            app:layout_constraintStart_toStartOf="@id/exercise_fragment_name_label"/>

        <TextView
            android:id="@+id/exercise_fragment_equipment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.comaSeparatedEquipment}"
            android:layout_marginStart="10dp"
            app:layout_constraintBaseline_toBaselineOf="@id/exercise_fragment_equipment_label"
            app:layout_constraintStart_toEndOf="@id/exercise_fragment_equipment_label"
            app:layout_constraintEnd_toEndOf="@id/exercise_fragment_name"
            tools:text="1,2,3,4,5"/>

        <TextView
            android:id="@+id/exercise_fragment_muscles_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/muscles_label"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/exercise_fragment_equipment"
            app:layout_constraintStart_toStartOf="@id/exercise_fragment_name_label"/>

        <TextView
            android:id="@+id/exercise_fragment_muscles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.comaSeparatedMuscles}"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/exercise_fragment_muscles_label"
            app:layout_constraintStart_toEndOf="@id/exercise_fragment_muscles_label"
            app:layout_constraintEnd_toEndOf="@id/exercise_fragment_name"
            tools:text="1,2,3,4,5"/>

        <TextView
            android:id="@+id/exercise_fragment_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_label"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/exercise_fragment_muscles"
            app:layout_constraintStart_toStartOf="@id/exercise_fragment_name_label"/>

        <TextView
            android:id="@+id/exercise_fragment_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            html="@{viewModel.description}"
            app:layout_constraintTop_toTopOf="@id/exercise_fragment_description_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/exercise_fragment_description_label"
            app:layout_constraintEnd_toEndOf="@id/exercise_fragment_name"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Exercise description"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/exercise_fragment_images"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/exercise_fragment_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_image"
            tools:itemCount="10"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>